Qix is on the house

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <p>Coisas para fazer no Animal Crossing</p>
     <ul>
+        <li>Venerar a kailane minha princesa s2</li>
         <li>Chacoalhar árvores</li>
         <li>Bater em pedras</li>
         <li>Pegar fósseis</li>
